# ai_orchestrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: devforge-implementer.md  devforge-reviewer.md  policy-security-auditor.md  prompt-author.md  provider-adapter-specialist.md
.claude/skills/devf-mock-run/: SKILL.md
.claude/skills/devf-plan-sync/: SKILL.md
.claude/skills/devf-policy-dogfood/: SKILL.md
.claude/skills/devf-task-start/: SKILL.md
_workspace/: README.md
devforge/: __init__.py  __main__.py  cli.py
devforge/core/: config_loader.py  prompt_renderer.py  role_router.py  run_context.py  sqlite_index.py  state_store.py  workflow_engine.py
devforge/dashboard/: __init__.py  backend.py
devforge/dashboard/static/: app.css  app.js  index.html
devforge/evaluators/: command_policy_checker.py  file_policy_checker.py  judge.py  score_calculator.py  secret_scanner.py  test_mutation_checker.py  validation_runner.py
devforge/git/: diff_collector.py  worktree_manager.py
devforge/project_profiles/: node_react.yaml  python_fastapi.yaml
devforge/prompts/roles/: implementer.md  reviewer.md
devforge/providers/: _subprocess.py  base.py  claude_agent_sdk.py  claude_cli.py  codex_cli.py  local_rule_based.py  mock.py  openai_api.py  registry.py
devforge/stages/: _workflow_variants.py  acceptance_coverage.py  app_from_prd_driver.py  architecture_generator.py  backlog_generator.py  backlog_implementer.py  candidate_comparison.py  candidate_loop.py  code_review_only_driver.py  fallback.py  feature_driver.py  final_report.py  implementation_plan_generator.py  implementer_stage.py  mvp_scope.py  prd_intake.py  release_packaging.py  repo_context_collector.py  requirements_schema.py  research_optimize_driver.py  reviewer_stage.py  revision_loop.py  scaffold_generator.py  task_normalizer.py  ux_flow.py  vertical_slice_implementer.py  vertical_slice_planner.py
devforge/workflows/: app_from_prd.yaml  bugfix.yaml  code_review_only.yaml  feature.yaml  refactor.yaml  research_optimize.yaml
docs/: CONFIG.md  INSTALL.md  PROVIDERS.md  REAL_PROVIDER_SMOKE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPORTS.md  ROADMAP.md  SECURITY.md  TYPING.md  WORKFLOWS.md
docs/plan/: 01_개발_계획서_AI_Dev_Orchestrator.md  02_아키텍처_설계서_AI_Dev_Orchestrator.md  03_Task_Plan_AI_Dev_Orchestrator.md
examples/: devforge.yaml
examples/prds/: sample_todo_app.md
examples/tasks/: add_health_endpoint.md
tests/: conftest.py  test_acceptance_coverage.py  test_apply_command.py  test_architecture_generator.py  test_backlog_generator.py  test_backlog_implementer.py  test_candidate_comparison.py  test_candidate_loop.py  test_command_policy.py  test_config_loader.py  test_create_app_command.py  test_dashboard_backend.py  test_fallback.py  test_file_policy.py  test_final_report.py  test_implementation_plan_generator.py  test_judge.py  test_mvp_scope.py  test_prd_intake.py  test_providers_base.py  test_providers_claude_agent_sdk.py  test_providers_codex_claude.py  test_providers_openai_api.py  test_providers_registry.py  test_release_packaging.py  test_repo_context_collector.py  test_report_command.py  test_requirements_schema.py  test_role_router.py  test_run_context.py  test_scaffold_generator.py  test_score_calculator.py  test_secret_scanner.py  test_sqlite_index.py  test_state_store.py  test_task_normalizer.py  test_test_mutation.py  test_ux_flow.py  test_validation_runner.py  test_version_command.py  (+4 more)
tests/integration/: _mock_helpers.py  test_app_from_prd_workflow.py  test_bugfix_refactor_workflows.py  test_code_review_only_workflow.py  test_fallback_tournament.py  test_feature_workflow.py  test_real_provider_smoke.py  test_research_optimize_workflow.py  test_revision_loop.py  test_security_regression.py  test_state_recording.py
