[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devforge"
version = "0.0.1"
description = "AI Dev Orchestrator — local-first CLI that orchestrates Claude Code / Codex as bounded workers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Dev Orchestrator Contributors" }]
keywords = [
    "claude-code",
    "codex",
    "agent",
    "orchestrator",
    "llm",
    "code-generation",
    "code-review",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

# Project URLs are intentionally omitted until the public repository
# location is finalised. See docs/RELEASE_CHECKLIST.md — the first
# pre-publish step is to add the canonical Repository / Documentation /
# Changelog / Issues URLs here so PyPI's project page is useful.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    # Dashboard (DEVF-082) test deps — let CI exercise the FastAPI routes.
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    # Provider SDK test deps — adapters use monkey-patched fakes in tests,
    # but listing the real packages here keeps the lazy imports resolvable.
    "openai>=1.30",
    "anthropic>=0.30",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
providers-openai = [
    "openai>=1.30",
]
providers-anthropic = [
    "anthropic>=0.30",
]

[project.scripts]
devforge = "devforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devforge*"]
exclude = ["tests*", "_workspace*", ".orchestrator*"]

[tool.setuptools.package-data]
devforge = [
    "workflows/*.yaml",
    "prompts/roles/*.md",
    "prompts/schemas/*.json",
    "project_profiles/*.yaml",
    "dashboard/static/*.html",
    "dashboard/static/*.css",
    "dashboard/static/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# B008: typer/click idiom (function call in argument default).
# E501: long lines handled by formatter, not lint.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Incremental strict-mode tier. Modules listed below are held to a
# tighter standard: untyped defs / Any returns / implicit-Optional are
# all flagged. The rest of the codebase stays on the default profile so
# the typing roll-out can happen module-by-module without forcing a
# big-bang rewrite. See docs/TYPING.md.
[[tool.mypy.overrides]]
module = [
    "devforge.core.config_loader",
    "devforge.core.run_context",
    "devforge.core.sqlite_index",
    "devforge.core.state_store",
    "devforge.evaluators.command_policy_checker",
    "devforge.evaluators.file_policy_checker",
    "devforge.evaluators.judge",
    "devforge.evaluators.score_calculator",
    "devforge.evaluators.secret_scanner",
    "devforge.evaluators.test_mutation_checker",
    "devforge.evaluators.validation_runner",
    "devforge.providers.base",
    "devforge.providers.local_rule_based",
    "devforge.providers.mock",
    "devforge.providers.openai_api",
    "devforge.providers.claude_agent_sdk",
    "devforge.stages.backlog_generator",
    "devforge.stages.acceptance_coverage",
    "devforge.stages.release_packaging",
    "devforge.stages._workflow_variants",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (mock providers only)",
    "slow: slow tests",
    "real_provider: smoke tests that require an installed Codex/Claude CLI (opt-in; see docs/REAL_PROVIDER_SMOKE.md)",
]

[project.urls]
Repository = "https://github.com/SeokpilYoon/ai_orchestrator"
Source = "https://github.com/SeokpilYoon/ai_orchestrator"
Issues = "https://github.com/SeokpilYoon/ai_orchestrator/issues"
Changelog = "https://github.com/SeokpilYoon/ai_orchestrator/blob/main/CHANGELOG.md"
Documentation = "https://github.com/SeokpilYoon/ai_orchestrator/blob/main/README.md"